[package]
name = "itree"
version = "0.3.1"
authors = ["sashaweiss <sasha@sashaweiss.coffee>"]
description = "An interactively navigable version of the Linux utility `tree`"
homepage = "https://github.com/sashaweiss/itree"
repository = "https://github.com/sashaweiss/itree"
readme = "README.md"
keywords = ["tree", "interactive", "navigate", "directory"]
license = "MIT"

[dependencies]
termion = "1.5"
indextree = "1.1"
ignore = "0.4"
clap = "2.31"
